# mega

./: README.md
desktop/: CMakeLists.txt  sign_modern_context_menu_products.cmd  sign_products.cmd
desktop/cmake/modules/: desktopapp_configuration.cmake
desktop/contrib/build_qt/windows/: build-qt.cmd
desktop/doc/: Installer_win.md
desktop/src/MEGAShellExt/: MEGAShellExt.vcxproj  MEGAShellExt.vcxproj.filters  MEGAinterface.h
desktop/src/MEGAShellExt/ModernShellContextMenu/msix/: generateAppxManifest.cmake
desktop/src/MEGASync/control/Preferences/: Preferences.cpp
desktop/src/MEGASync/gui/: SettingsDialog.cpp
desktop/src/MEGASync/mega/: jid  megaclient_statecache14_WlFVOWN1alo4b2_PS2diYaKyZeABpvHMusLG.db-shm  megaclient_statecache14_WlFVOWN1alo4b2_PS2diYaKyZeABpvHMusLG.db-wal  megaclient_statecache14_status_WlFVOWN1alo4b2_PS2diYaKyZeABpvHMusLG.db-shm  megaclient_statecache14_status_WlFVOWN1alo4b2_PS2diYaKyZeABpvHMusLG.db-wal  megaclient_statecache14_transfers_WlFVOWN1alo4b2_PS2diYaKyZeABpvHMusLG.db-shm  megaclient_statecache14_transfers_WlFVOWN1alo4b2_PS2diYaKyZeABpvHMusLG.db-wal
desktop/src/MEGASync/mega/cmake/modules/: configuration.cmake
desktop/src/MEGASync/mega/cmake/vcpkg_overlay_ports/readline-unix/: portfile.cmake
desktop/src/MEGASync/mega/cmake/vcpkg_overlay_triplets/: arm64-ios-mega.cmake  arm64-ios-simulator-mega.cmake  x64-ios-simulator-mega.cmake
desktop/src/MEGASync/mega/examples/simple_client/: CMakeLists.txt  simple_client.cpp
desktop/src/MEGASync/mega/src/: commands.cpp  megaapi.cpp  request.cpp
